--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: 鲍于
 description: 'BaoYu Page'
-url: 'http://baoxizhao.com'
-baseurl: 'yusijia'
+url: ''
+baseurl: 'http://baoxizhao.com/yusijia'
 profilepic: '/images/yusijia.jpg'
 bkimage: '/images/bg1.jpg'
 google_analytics: UA-XXXXXX-X
