--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -47,7 +47,7 @@
 - name: 2020年7月 哈尔滨
   gh_user: ArvatoSystems
   repo: FaceApiWPF
-  img: /images/8.jpg
+  img: /images/8.JPG
   desc: 我不仅要住进你的家里，还要住进你的心里
 
 - name: 2020年10月 苏州
