--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 鲍于
 description: 'BaoYu Page'
 url: ''
-baseurl: 'http://baoxizhao.com/yusijia'
+baseurl: ''
 profilepic: '/images/yusijia.jpg'
 bkimage: '/images/bg1.jpg'
 google_analytics: UA-XXXXXX-X
